--- a/Index.html
+++ b/Index.html
@@ -157,10 +157,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 Graf Logic Pembelajaran Crypto</h1>
+        <h1>🚀 Welcome to our Website!</h1>
         
         <div class="description">
-            <h3> Kurikulum Crypto Alliance</h3>
+            <h3> Kurikulum yang digunakan Crypto Alliance</h3>
             <p><strong>Fase Awal:</strong> Dimulai dengan filosofi dasar "Start with Why?" dan pemahaman tentang financial freedom</p>
             <p><strong>Fase Persiapan:</strong> Latihan soal dan pemahaman keuntungan masuk lebih awal di crypto</p>
             <p><strong>Fase Pembelajaran:</strong> Empat wilayah yang berjalan paralel untuk membangun fondasi pengetahuan dan praktikal</p>
